# GitBuddy

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: commit_message.rs  main.rs
src/ai/: git.rs  mod.rs
src/config/: mod.rs  storage.rs  vendor.rs
src/llm/: anthropic_compatible.rs  mod.rs  openai_compatible.rs  openai_compatible_builder.rs
src/prompt/: mod.rs
